testing git commits from workflow

--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -17,6 +17,8 @@ jobs:
           ref: master
 
       - run: echo "Hello World" > test.txt
+      - run: git config --global user.email "vivid@vonage.com"
+      - run: git config --global user.name "Vivid"
 
       - run: git checkout -b this_is_a_test_branch_please_delete_me
 
