testing git commits from workflow

--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -21,7 +21,7 @@ jobs:
       - run: git config --global user.email "vivid@vonage.com"
       - run: git config --global user.name "Vivid"
 
-      - run: git checkout -b this_is_a_test_branch_please_delete_me
+      #- run: git checkout -b this_is_a_test_branch_please_delete_me
 
       - run: git commit -a -m "Testing push to master without the use of PATs" --author="Vivid <vivid@vonage.com>"
 
