--- a/common/umbrella/configs/tsconfig.json
+++ b/common/umbrella/configs/tsconfig.json
@@ -15,6 +15,7 @@
 		"inlineSources": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
+		"noImplicitOverride": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"experimentalDecorators": true,
