--- a/components/linear-progress/package.json
+++ b/components/linear-progress/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@material/mwc-linear-progress": "^0.22.1",
+		"@material/mwc-base": "^0.22.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-design-tokens": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
