--- a/components/circular-progress/package.json
+++ b/components/circular-progress/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {
 		"@material/mwc-circular-progress": "^0.22.1",
+		"@material/mwc-base": "^0.22.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-design-tokens": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
