--- a/components/top-app-bar-fixed/package.json
+++ b/components/top-app-bar-fixed/package.json
@@ -30,13 +30,13 @@
 		"@material/mwc-top-app-bar": "^0.22.1",
 		"@material/mwc-top-app-bar-fixed": "^0.22.1",
 		"@vonage/vvd-core": "2.18.1",
-		"@vonage/vvd-style-coupling": "2.18.1",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
 		"@vonage/vvd-typography": "2.18.1",
 		"@vonage/vvd-umbrella": "2.18.1",
+		"@vonage/vwc-top-app-bar": "2.18.1",
 		"typescript": "^4.3.2"
 	}
 }
