--- a/common/umbrella/configs/tsconfig.json
+++ b/common/umbrella/configs/tsconfig.json
@@ -6,10 +6,8 @@
 		"lib": [
 			"es2017",
 			"dom",
-			"dom.iterable",
-			"es2018.promise"
+			"dom.iterable"
 		],
-		"types": [],
 		"declaration": true,
 		"sourceMap": true,
 		"inlineSources": true,
@@ -18,15 +16,47 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"experimentalDecorators": true,
-		"stripInternal": true,
-		"forceConsistentCasingInFileNames": true,
-		// "skipLibCheck": true, // would force consumers to enable this as well
+		"skipLibCheck": true,
 		"strict": true,
+		"noImplicitAny": false,
 		"outDir": "./",
 		"baseUrl": "./",
 		"composite": true,
 		"importHelpers": true,
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
 		// "esModuleInterop": true // would force consumers to enable this as well
-	}
+		"plugins": [
+			{
+				"name": "ts-lit-plugin",
+				"rules": {
+					"no-unknown-tag-name": "error",
+					"no-unclosed-tag": "error",
+					"no-unknown-property": "error",
+					"no-unintended-mixed-binding": "error",
+					"no-invalid-boolean-binding": "error",
+					"no-expressionless-property-binding": "error",
+					"no-noncallable-event-binding": "error",
+					"no-boolean-in-attribute-binding": "error",
+					"no-complex-attribute-binding": "error",
+					"no-nullable-attribute-binding": "error",
+					"no-incompatible-type-binding": "error",
+					"no-invalid-directive-binding": "error",
+					"no-incompatible-property-type": "error",
+					"no-unknown-property-converter": "error",
+					"no-invalid-attribute-name": "error",
+					"no-invalid-tag-name": "error",
+					"no-property-visibility-mismatch": "error",
+					"no-unknown-attribute": "off",
+					"no-unknown-event": "off",
+					"no-unknown-slot": "off",
+					"no-invalid-css": "off"
+				}
+			}
+		]
+	},
+	"include": [
+		"custom_typings/**/*.ts",
+		"*.ts"
+	],
+	"exclude": []
 }
