--- a/components/chips/package.json
+++ b/components/chips/package.json
@@ -28,12 +28,12 @@
 	},
 	"dependencies": {
 		"@material/chips": "9.0.0-canary.1c156d69d.0",
-		"@material/mwc-base": "^0.22.1",
+		"@material/mwc-base": "=0.25.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-style-coupling": "2.18.1",
 		"@vonage/vwc-icon": "2.18.1",
-		"lit-element": "^2.4.0",
-		"lit-html": "^1.3.0",
+		"lit-element": "^3.0.0",
+		"lit-html": "^2.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
