--- a/components/circular-progress/package.json
+++ b/components/circular-progress/package.json
@@ -26,13 +26,13 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-circular-progress": "^0.22.1",
-		"@material/mwc-base": "^0.22.1",
+		"@material/mwc-circular-progress": "=0.25.1",
+		"@material/mwc-base": "=0.25.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-design-tokens": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
 		"@vonage/vvd-style-coupling": "2.18.1",
-		"lit-element": "^2.4.0",
+		"lit-element": "^3.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
