--- a/components/icon-button-toggle/package.json
+++ b/components/icon-button-toggle/package.json
@@ -26,15 +26,15 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-icon-button-toggle": "^0.22.1",
-		"@material/mwc-icon-button": "^0.22.1",
+		"@material/mwc-icon-button-toggle": "=0.25.1",
+		"@material/mwc-icon-button": "=0.25.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
 		"@vonage/vvd-style-coupling": "2.18.1",
 		"@vonage/vwc-icon-button": "2.18.1",
 		"@vonage/vwc-icon": "2.18.1",
-		"lit-element": "^2.4.0",
-		"lit-html": "^1.3.0",
+		"lit-element": "^3.0.0",
+		"lit-html": "^2.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
