--- a/components/icon/package.json
+++ b/components/icon/package.json
@@ -27,11 +27,11 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-base": "^0.22.1",
+		"@material/mwc-base": "=0.25.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
-		"lit-element": "^2.4.0",
-		"lit-html": "^1.3.0",
+		"lit-element": "^3.0.0",
+		"lit-html": "^2.0.0",
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
