--- a/components/menu/package.json
+++ b/components/menu/package.json
@@ -27,11 +27,11 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-menu": "^0.22.1",
+		"@material/mwc-menu": "=0.25.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vwc-list": "2.18.1",
 		"@vonage/vwc-surface": "2.18.1",
-		"lit-element": "~2.4.0",
+		"lit-element": "^3.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
