--- a/components/notched-outline/package.json
+++ b/components/notched-outline/package.json
@@ -27,8 +27,8 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-notched-outline": "^0.22.1",
-		"lit-element": "^2.4.0",
+		"@material/mwc-notched-outline": "=0.25.1",
+		"lit-element": "^3.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
