--- a/components/textarea/package.json
+++ b/components/textarea/package.json
@@ -26,14 +26,14 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-textarea": "^0.22.1",
-		"@material/mwc-textfield": "^0.22.1",
+		"@material/mwc-textarea": "=0.25.1",
+		"@material/mwc-textfield": "=0.25.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
 		"@vonage/vvd-style-coupling": "2.18.1",
 		"@vonage/vwc-helper-message": "2.18.1",
 		"@vonage/vwc-notched-outline": "2.18.1",
-		"lit-element": "^2.4.0",
+		"lit-element": "^3.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
