--- a/components/top-app-bar-fixed/package.json
+++ b/components/top-app-bar-fixed/package.json
@@ -27,11 +27,11 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-top-app-bar": "^0.22.1",
-		"@material/mwc-top-app-bar-fixed": "^0.22.1",
+		"@material/mwc-top-app-bar": "=0.25.1",
+		"@material/mwc-top-app-bar-fixed": "=0.25.1",
 		"@vonage/vwc-top-app-bar": "2.18.1",
 		"@vonage/vvd-core": "2.18.1",
-		"lit-element": "^2.4.0",
+		"lit-element": "^3.0.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
