--- a/common/umbrella/configs/tsconfig.json
+++ b/common/umbrella/configs/tsconfig.json
@@ -26,7 +26,8 @@
 		"baseUrl": "./",
 		"composite": true,
 		"importHelpers": true,
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
 		// "esModuleInterop": true // would force consumers to enable this as well
+		"importsNotUsedAsValues": "error"
 	}
 }
