test ts imports

--- a/common/umbrella/configs/tsconfig.json
+++ b/common/umbrella/configs/tsconfig.json
@@ -28,6 +28,16 @@
 		"importHelpers": true,
 		"allowSyntheticDefaultImports": true,
 		// "esModuleInterop": true // would force consumers to enable this as well
-		"importsNotUsedAsValues": "error"
+		"importsNotUsedAsValues": "error",
+		"removeComments": true,
+		"plugins": [
+			{
+				"name": "ts-lit-plugin",
+				"strict": true,
+				"rules": {
+					"no-missing-import": "error"
+				}
+			}
+		]
 	}
 }
