--- a/package.json
+++ b/package.json
@@ -96,7 +96,6 @@
 		"eslint": "^7.32.0",
 		"eslint-plugin-compat": "^3.13.0",
 		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-lit": "^1.5.1",
 		"eslint-plugin-lit-a11y": "^1.0.1",
 		"eslint-plugin-mocha": "^9.0.0",
 		"eslint-plugin-no-only-tests": "^2.6.0",
@@ -123,7 +122,6 @@
 		"kefir": "^3.8.7",
 		"lerna": "^4.0.0",
 		"lint-staged": "^11.1.2",
-		"lit-analyzer": "^1.2.1",
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
@@ -142,6 +140,7 @@
 		"stylelint-config-sass-guidelines": "^8.0.0",
 		"stylelint-no-unsupported-browser-features": "^5.0.1",
 		"tar-stream": "^2.1.4",
+		"ts-lit-plugin": "^1.2.1",
 		"ts-loader": "^9.1.2",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.3.0",
