--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"changelog": "yarn lerna exec --concurrency 1 --stream 'conventional-changelog --preset angular --release-count 0 --commit-path $PWD --pkg $PWD/package.json --outfile $PWD/CHANGELOG.md --verbose'",
 		"lint:stylelint": "stylelint {common,components}/**/*.scss --quiet",
 		"lint:eslint": "eslint {common,components}/*/{src,test}/**/*.{js,ts} --no-error-on-unmatched-pattern --quiet",
-		"lint:lit": "lit-analyzer {common,components}/*/src/**/*.ts --rules.no-incompatible-type-binding off --strict --quiet",
+		"lint:lit": "lit-analyzer {common,components}/*/src/**/*.ts --rules.no-missing-import error --rules.no-incompatible-type-binding off --strict --quiet",
 		"lint": "yarn lint:stylelint && yarn lint:eslint && yarn lint:lit",
 		"format:stylelint": "yarn lint:stylelint --fix",
 		"format:eslint": "yarn lint:eslint --fix",
@@ -122,6 +122,7 @@
 		"kefir": "^3.8.7",
 		"lerna": "^4.0.0",
 		"lint-staged": "^11.1.2",
+		"lit-analyzer": "^1.2.1",
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
@@ -140,7 +141,6 @@
 		"stylelint-config-sass-guidelines": "^8.0.0",
 		"stylelint-no-unsupported-browser-features": "^5.0.1",
 		"tar-stream": "^2.1.4",
-		"ts-lit-plugin": "^1.2.1",
 		"ts-loader": "^9.1.2",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.3.0",
