build(workspace): migrate from wca to cem

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"git:sync": "git submodule sync && git submodule update --init --recursive --remote",
 		"postinstall": "husky install && yarn link",
 		"link": "lerna link",
-		"storybook:vivid:pre": "yarn compile && yarn wca:json && node ./.storybook/build-scripts/build-pre.mjs",
+		"storybook:vivid:pre": "yarn compile && yarn cem:json && node ./.storybook/build-scripts/build-pre.mjs",
 		"storybook:vivid:post": "node ./.storybook/build-scripts/build-post.mjs",
 		"storybook:build": "yarn storybook:vivid:pre && build-storybook -c .storybook -o .out -s ./.storybook/static && yarn storybook:vivid:post",
 		"storybook": "start-storybook -s ./.storybook/static -p 9000",
@@ -46,8 +46,7 @@
 		"clean:git": "git clean -e .npmrc -dfx",
 		"clean": "yarn clean:typescript && yarn clean:git",
 		"watch": "monowatch",
-		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
-		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
+		"cem:json": "cem analyze --globs \"components/*/src/*.?s\" --litelement",
 		"docs:spell-check": "spech docs/*.md",
 		"build-ui-tests": "webpack -c ./ui-tests/webpack.config.js",
 		"run-ui-tests": "ts-node --project ./ui-tests/tsconfig.json ./ui-tests/index.ts",
@@ -147,7 +146,7 @@
 		"tslib": "^2.3.0",
 		"typescript": "^4.3.2",
 		"uuid": "^8.3.2",
-		"web-component-analyzer": "^1.1.6",
+		"@custom-elements-manifest/analyzer": "^0.5.4",
 		"webpack-cli": "^4.7.0",
 		"webpack-dev-server": "^4.0.0",
 		"xmlhttprequest-ssl": "^1.6.2"
