--- a/components/icon-button-toggle/package.json
+++ b/components/icon-button-toggle/package.json
@@ -28,9 +28,9 @@
 	"dependencies": {
 		"@material/mwc-icon-button-toggle": "^0.22.1",
 		"@material/mwc-icon-button": "^0.22.1",
+		"@material/mwc-ripple": "^0.22.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
-		"@vonage/vvd-style-coupling": "2.18.1",
 		"@vonage/vwc-icon-button": "2.18.1",
 		"@vonage/vwc-icon": "2.18.1",
 		"lit-element": "^2.4.0",
