--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"changelog": "yarn lerna exec --concurrency 1 --stream 'conventional-changelog --preset angular --release-count 0 --commit-path $PWD --pkg $PWD/package.json --outfile $PWD/CHANGELOG.md --verbose'",
 		"lint:stylelint": "stylelint \"{common,components}/**/*.scss\" --quiet",
 		"lint:eslint": "eslint \"{common,components}/*/{src,test}/**/*.{js,ts}\" --no-error-on-unmatched-pattern --quiet",
-		"lint:lit": "lit-analyzer \"{common,components}/*/src/**/*.ts\" --rules.no-missing-import error --rules.no-incompatible-type-binding off --strict --quiet",
+		"lint:lit": "lit-analyzer \"{common,components}/*/src/**/*.ts\" --rules.no-nullable-attribute-binding off --rules.no-missing-import error --rules.no-incompatible-type-binding off --strict --quiet",
 		"lint": "yarn lint:stylelint && yarn lint:eslint && yarn lint:lit",
 		"format:stylelint": "yarn lint:stylelint --fix",
 		"format:eslint": "yarn lint:eslint --fix",
@@ -96,6 +96,7 @@
 		"eslint": "^7.32.0",
 		"eslint-plugin-compat": "^3.13.0",
 		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-lit": "^1.5.1",
 		"eslint-plugin-lit-a11y": "^1.0.1",
 		"eslint-plugin-mocha": "^9.0.0",
 		"eslint-plugin-no-only-tests": "^2.6.0",
