--- a/components/icon-button/package.json
+++ b/components/icon-button/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {
 		"@material/mwc-icon-button": "^0.22.1",
+		"@material/mwc-ripple": "^0.22.1",
 		"@vonage/vvd-core": "2.18.1",
 		"@vonage/vvd-foundation": "2.18.1",
 		"@vonage/vvd-style-coupling": "2.18.1",
