--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"changelog": "yarn lerna exec --concurrency 1 --stream 'conventional-changelog --preset angular --release-count 0 --commit-path $PWD --pkg $PWD/package.json --outfile $PWD/CHANGELOG.md --verbose'",
 		"lint:stylelint": "stylelint \"{common,components}/**/*.scss\" --quiet",
 		"lint:eslint": "eslint \"{common,components}/*/{src,test}/**/*.{js,ts}\" --no-error-on-unmatched-pattern --quiet",
-		"lint:lit": "lit-analyzer \"{common,components}/*/src/**/*.ts\" --rules.no-nullable-attribute-binding off --rules.no-missing-import error --rules.no-incompatible-type-binding off --strict --quiet",
+		"lint:lit": "lit-analyzer \"{common,components}/*/src/**/*.ts\" --rules.no-nullable-attribute-binding off --rules.no-missing-import warning --rules.no-incompatible-type-binding off --strict",
 		"lint": "yarn lint:stylelint && yarn lint:eslint && yarn lint:lit",
 		"format:stylelint": "yarn lint:stylelint --fix",
 		"format:eslint": "yarn lint:eslint --fix",
