--- a/components/elevation/package.json
+++ b/components/elevation/package.json
@@ -26,8 +26,10 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-foundation": "2.20.0",
-		"@vonage/vvd-umbrella": "2.20.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
+	},
+	"devDependencies": {
+		"@vonage/vvd-umbrella": "2.20.0"
 	}
 }
