--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@vonage/vwc-inline",
+	"name": "@vonage/vwc-layout",
 	"version": "2.20.0",
 	"description": "scheme switch component",
 	"author": "yinonov <yinon@hotmail.com>",
