--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "@vonage/vwc-inline",
+	"name": "@vonage/vwc-layout",
 	"version": "2.20.0",
 	"description": "scheme switch component",
 	"author": "yinonov <yinon@hotmail.com>",
-	"homepage": "https://github.com/Vonage/vivid/tree/master/components/inline#readme",
+	"homepage": "https://github.com/Vonage/vivid/tree/master/components/layout#readme",
 	"license": "ISC",
-	"main": "vwc-inline.js",
-	"module": "vwc-inline.js",
+	"main": "vwc-layout.js",
+	"module": "vwc-layout.js",
 	"files": [
 		"src",
 		"*.js",
@@ -16,7 +16,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/vonage/vivid.git",
-		"directory": "components/inline"
+		"directory": "components/layout"
 	},
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
