--- a/package.json
+++ b/package.json
@@ -54,58 +54,56 @@
 		"ui-tests": "yarn build-ui-tests && yarn run-ui-tests"
 	},
 	"devDependencies": {
-		"@open-wc/eslint-config": "^3.0.0",
-		"@open-wc/karma-esm": "^3.0.9",
-		"@open-wc/lit-helpers": "^0.3.11",
-		"@open-wc/semantic-dom-diff": "^0.19.0",
+		"@open-wc/eslint-config": "^4.3.0",
+		"@open-wc/karma-esm": "^4.0.0",
+		"@open-wc/lit-helpers": "^0.3.12",
+		"@open-wc/semantic-dom-diff": "^0.19.4",
 		"@open-wc/testing-helpers": "^1.8.12",
 		"@open-wc/testing-karma": "^4.0.9",
-		"@storybook/addon-a11y": "^6.2.1",
-		"@storybook/addon-actions": "^6.2.1",
-		"@storybook/addon-console": "^1.2.1",
-		"@storybook/addon-controls": "^6.2.1",
-		"@storybook/addon-docs": "^6.2.1",
-		"@storybook/addon-viewport": "^6.2.1",
-		"@storybook/addons": "^6.2.1",
-		"@storybook/react": "^6.2.1",
-		"@storybook/theming": "^6.2.1",
-		"@storybook/web-components": "^6.2.1",
+		"@storybook/addon-a11y": "^6.3.10",
+		"@storybook/addon-actions": "^6.3.10",
+		"@storybook/addon-console": "^1.2.3",
+		"@storybook/addon-controls": "^6.3.10",
+		"@storybook/addon-docs": "^6.3.10",
+		"@storybook/addon-viewport": "^6.3.10",
+		"@storybook/addons": "^6.3.10",
+		"@storybook/theming": "^6.3.10",
+		"@storybook/web-components": "^6.3.10",
 		"@types/serve-handler": "^6.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.14.2",
-		"@typescript-eslint/parser": "^4.14.2",
-		"@vonage/monowatch": "^0.0.5",
-		"@webcomponents/webcomponentsjs": "^2.5.0",
-		"@whitespace/storybook-addon-html": "^4.2.0",
-		"chai": "^4.2.0",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.33.0",
+		"@vonage/monowatch": "^0.0.7",
+		"@whitespace/storybook-addon-html": "^5.0.0",
+		"chai": "^4.3.4",
 		"chai-a11y-axe": "^1.3.1",
-		"chai-dom": "^1.9.0",
+		"chai-dom": "^1.10.0",
 		"chai-karma-snapshot": "^0.8.0",
 		"chai-spies": "^1.0.0",
 		"change-case": "^4.1.2",
-		"chokidar": "^3.4.0",
-		"clean-webpack-plugin": "^4.0.0-alpha.0",
+		"chokidar": "^3.5.2",
+		"clean-webpack-plugin": "^4.0.0",
 		"command-line-args": "^5.1.1",
 		"command-line-usage": "^6.1.0",
 		"concurrently": "^5.2.0",
 		"conventional-changelog-cli": "^2.1.0",
 		"copy-webpack-plugin": "^9.0.1",
 		"deepmerge": "^4.2.2",
-		"depcheck": "^1.4.0",
+		"depcheck": "^1.4.2",
 		"element-f": "^2.0.0",
 		"es-dev-server": "^1.50.8",
 		"eslint": "^7.32.0",
 		"eslint-plugin-compat": "^3.13.0",
 		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-lit": "^1.5.1",
+		"eslint-plugin-lit": "^1.6.0",
 		"eslint-plugin-lit-a11y": "^1.0.1",
 		"eslint-plugin-mocha": "^9.0.0",
 		"eslint-plugin-no-only-tests": "^2.6.0",
-		"eslint-plugin-wc": "^1.3.1",
+		"eslint-plugin-wc": "^1.3.2",
 		"fibers": "^5.0.0",
-		"glob": "^7.1.6",
+		"glob": "^7.2.0",
 		"got": "^11.8.1",
 		"highlight.js": "^10.4.0",
-		"husky": "^7.0.1",
+		"husky": "^7.0.2",
 		"immer": "^9.0.6",
 		"ini": "^1.3.6",
 		"jimp": "^0.16.1",
@@ -122,7 +120,7 @@
 		"karma-safarinative-launcher": "^1.1.0",
 		"kefir": "^3.8.7",
 		"lerna": "^4.0.0",
-		"lint-staged": "^11.1.2",
+		"lint-staged": "^11.2.0",
 		"lit-analyzer": "^1.2.1",
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
@@ -145,7 +143,7 @@
 		"ts-loader": "^9.1.2",
 		"ts-node": "^9.1.1",
 		"tslib": "^2.3.0",
-		"typescript": "^4.3.2",
+		"typescript": "^4.4.3",
 		"uuid": "^8.3.2",
 		"web-component-analyzer": "^1.1.6",
 		"webpack-cli": "^4.7.0",
