added esbuild for ts transpilation to expedite the build process

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -36,7 +36,7 @@ jobs:
       - run: yarn install --frozen-lockfile --network-timeout 100000
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-      - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
+      - run: yarn lerna run build:ci --stream --concurrency=15 --include-dependencies
       - run: tar -zcf /tmp/vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
         with:
