--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
 		"test:safari-local": "karma start --coverage --browsers=SafariNative --autoWatch=true --singleRun=false",
 		"test:dev": "yarn compile && concurrently -r \"yarn watch\" \"karma start karma.conf.spec.js\"",
 		"test:dev-no-build": "karma start karma.conf.spec.js",
-		"test:dev:ci": "yarn compile && concurrently -r \"yarn watch\" \"RUN=CI karma start karma.conf.spec.js\"",
+		"test:dev:ci": "yarn compile:ci && concurrently -r \"yarn watch\" \"RUN=CI karma start karma.conf.spec.js\"",
 		"test:update-snapshots": "karma start --update-snapshots",
 		"test:prune-snapshots": "karma start --prune-snapshots",
 		"test:bs": "karma start --coverage",
 		"git:sync": "git submodule sync && git submodule update --init --recursive --remote",
 		"postinstall": "husky install && yarn link",
 		"link": "lerna link",
-		"storybook:vivid:pre": "yarn compile && yarn wca:json && node ./.storybook/build-scripts/build-pre.mjs",
+		"storybook:vivid:pre": "yarn compile:ci && yarn wca:json && node ./.storybook/build-scripts/build-pre.mjs",
 		"storybook:vivid:post": "node ./.storybook/build-scripts/build-post.mjs",
 		"storybook:build": "yarn storybook:vivid:pre && build-storybook -c .storybook -o .out -s ./.storybook/static && yarn storybook:vivid:post",
 		"storybook": "start-storybook -s ./.storybook/static -p 9000",
 		"start": "yarn storybook:vivid:pre && start-storybook -s ./.storybook/static -p 9000",
 		"build:design-tokens": "lerna run build --scope @vonage/vvd-design-tokens",
 		"compile": "lerna run build --stream",
+		"compile:ci": "lerna run build:ci --stream",
 		"compile:styles": "lerna run build:styles --stream",
 		"compile:typescript": "lerna run build:typescript",
 		"clean:typescript": "tsc -b --clean",
