--- a/components/elevation/package.json
+++ b/components/elevation/package.json
@@ -17,9 +17,11 @@
 		"directory": "components/elevation"
 	},
 	"scripts": {
+		"build:typescript:ci": "esbuild $(glob-spread \"./src/**/*.ts\") --outdir=.",
 		"build:typescript": "tsc -b",
 		"build:styles": "umbrella-style-modules",
-		"build": "yarn run build:styles && yarn run build:typescript"
+		"build": "yarn run build:styles && yarn run build:typescript",
+		"build:ci": "yarn run build:styles && yarn run build:typescript:ci"
 	},
 	"bugs": {
 		"url": "https://github.com/Vonage/vivid/issues"
