--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -25,7 +25,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-base": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-base": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-foundation": "2.20.1",
 		"@vonage/vwc-icon": "2.20.1",
