--- a/components/circular-progress/package.json
+++ b/components/circular-progress/package.json
@@ -26,8 +26,8 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-circular-progress": "^0.26.0-canary.406d6fe1.0",
-		"@material/mwc-base": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-circular-progress": "0.26.0-canary.406d6fe1.0",
+		"@material/mwc-base": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-design-tokens": "2.20.1",
 		"@vonage/vvd-foundation": "2.20.1",
