--- a/components/dialog/package.json
+++ b/components/dialog/package.json
@@ -26,7 +26,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-dialog": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-dialog": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-style-coupling": "2.20.1",
 		"@vonage/vvd-typography": "2.20.1",
