--- a/components/formfield/package.json
+++ b/components/formfield/package.json
@@ -27,7 +27,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-formfield": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-formfield": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-style-coupling": "2.20.1",
 		"lit": "^2.0.0",
