--- a/components/icon-button-toggle/package.json
+++ b/components/icon-button-toggle/package.json
@@ -26,9 +26,9 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-icon-button-toggle": "^0.26.0-canary.406d6fe1.0",
-		"@material/mwc-icon-button": "^0.26.0-canary.406d6fe1.0",
-		"@material/mwc-ripple": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-icon-button-toggle": "0.26.0-canary.406d6fe1.0",
+		"@material/mwc-icon-button": "0.26.0-canary.406d6fe1.0",
+		"@material/mwc-ripple": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-foundation": "2.20.1",
 		"@vonage/vwc-icon-button": "2.20.1",
