--- a/components/surface/package.json
+++ b/components/surface/package.json
@@ -26,7 +26,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-menu": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-menu": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"lit": "^2.0.0",
 		"tslib": "^2.3.0"
