--- a/components/switch/package.json
+++ b/components/switch/package.json
@@ -28,7 +28,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-switch": "^0.26.0-canary.406d6fe1.0",
+		"@material/mwc-switch": "0.26.0-canary.406d6fe1.0",
 		"@vonage/vvd-core": "2.20.1",
 		"@vonage/vvd-foundation": "2.20.1",
 		"lit": "^2.0.0",
