await lit-flatpicker publish

--- a/components/datepicker/package.json
+++ b/components/datepicker/package.json
@@ -33,7 +33,7 @@
 		"@vonage/vwc-menu": "2.20.1",
 		"@vonage/vwc-textfield": "2.20.1",
 		"flatpickr": "^4.6.9",
-		"lit-element": "^2.2.1",
+		"lit": "^2.0.0",
 		"lit-flatpickr": "^0.2.9",
 		"tslib": "^2.3.0"
 	},
