--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
 		"compile": "lerna run build --stream",
 		"compile:styles": "lerna run build:styles --stream",
 		"compile:typescript": "lerna run build:typescript",
-		"clean:typescript": "tsc -b --clean",
 		"clean:git": "git clean -e .npmrc -dfx",
-		"clean": "yarn clean:typescript && yarn clean:git",
+		"clean": "yarn clean:git",
 		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
@@ -54,7 +53,7 @@
 		"ui-tests": "yarn build-ui-tests && yarn run-ui-tests"
 	},
 	"devDependencies": {
-		"@open-wc/eslint-config": "^4.3.0",
+		"@open-wc/eslint-config": "^5.0.0",
 		"@open-wc/karma-esm": "^4.0.0",
 		"@open-wc/lit-helpers": "^0.3.12",
 		"@open-wc/semantic-dom-diff": "^0.19.4",
@@ -70,8 +69,8 @@
 		"@storybook/theming": "^6.3.10",
 		"@storybook/web-components": "^6.3.10",
 		"@types/serve-handler": "^6.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
 		"@vonage/monowatch": "^0.0.7",
 		"@whitespace/storybook-addon-html": "^5.0.0",
 		"chai": "^4.3.4",
@@ -91,11 +90,11 @@
 		"depcheck": "^1.4.2",
 		"element-f": "^2.0.0",
 		"es-dev-server": "^1.50.8",
-		"eslint": "^7.32.0",
+		"eslint": "^8.0.1",
 		"eslint-plugin-compat": "^3.13.0",
-		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-lit": "^1.6.0",
-		"eslint-plugin-lit-a11y": "^1.0.1",
+		"eslint-plugin-lit-a11y": "^1.1.0",
 		"eslint-plugin-mocha": "^9.0.0",
 		"eslint-plugin-no-only-tests": "^2.6.0",
 		"eslint-plugin-wc": "^1.3.2",
