--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
 		"compile": "lerna run build --stream",
 		"compile:styles": "lerna run build:styles --stream",
 		"compile:typescript": "lerna run build:typescript",
-		"clean:typescript": "tsc -b --clean",
+		"clean:node_modules": "rm -rf node_modules",
 		"clean:git": "git clean -e .npmrc -dfx",
-		"clean": "yarn clean:typescript && yarn clean:git",
+		"clean": "yarn clean:node_modules && yarn clean:git",
 		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
