--- a/components/layout/package.json
+++ b/components/layout/package.json
@@ -21,6 +21,7 @@
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
 		"build:typescript:ci": "esbuild $(glob-spread \"./src/**/*.ts\") --outdir=.",
+		"build:typescript": "tsc -b",
 		"build:styles": "umbrella-style-modules --path=\"./src\"",
 		"build": "yarn run build:styles && yarn run build:typescript",
 		"build:ci": "yarn run build:styles && yarn run build:typescript:ci"
