--- a/nx.json
+++ b/nx.json
@@ -217,5 +217,13 @@
   },
   "affected": {
     "defaultBase": "master"
-  }
+  },
+	"targetDependencies": {
+		"build": [
+			{
+				"target": "build",
+				"projects": "dependencies"
+			}
+		]
+	}
 }
