--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
 		"storybook": "yarn wca:json && start-storybook -s ./.storybook/static -p 9000",
 		"start": "yarn storybook:vivid:pre && start-storybook -s ./.storybook/static -p 9000",
 		"build:design-tokens": "lerna run build --scope @vonage/vvd-design-tokens",
-		"compile": "nx run-many --target=build --all --parallel --withDeps",
-		"clean:node_modules": "rm -rf node_modules",
-		"clean:git": "git clean -e .npmrc -dfx",
-		"clean": "yarn clean:node_modules && yarn clean:git",
+		"compile": "nx run-many --target=build --all --parallel=true",
+		"clean:hard": "git clean -e .npmrc -dfx",
+		"clean": "git clean -e .npmrc node_modules -df",
 		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
