Revert to VNG_VIVID_TOKEN

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -48,7 +48,7 @@ jobs:
     name: "Test Components on ${{ matrix.browser_name }}"
     runs-on: ${{ matrix.os }}
     env:
-      GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
     strategy:
       max-parallel: 10
       matrix:
@@ -105,7 +105,7 @@ jobs:
     name: Test Components Graphics
     runs-on: macos-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
     steps:
       - uses: actions/setup-node@v2
         with:
@@ -129,7 +129,7 @@ jobs:
     name: ${{ matrix.script_name }}
     runs-on: ubuntu-20.04
     env:
-      GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
     strategy:
       max-parallel: 10
       matrix:
