Retry without frozen

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -22,7 +22,7 @@ jobs:
     name: Build
     runs-on: ubuntu-20.04
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
@@ -33,7 +33,7 @@ jobs:
         with:
           path: "**/node_modules"
           key: ${{ hashFiles('yarn.lock') }}
-      - run: yarn install --frozen-lockfile --network-timeout 100000
+      - run: yarn install --network-timeout 100000
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
