Replace the token for a VVD one

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -49,7 +49,7 @@ jobs:
     name: "Test Components on ${{ matrix.browser_name }}"
     runs-on: ${{ matrix.os }}
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     strategy:
       max-parallel: 10
       matrix:
@@ -106,7 +106,7 @@ jobs:
     name: Test Components Graphics
     runs-on: macos-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     steps:
       - uses: actions/setup-node@v2
         with:
@@ -130,7 +130,7 @@ jobs:
     name: ${{ matrix.script_name }}
     runs-on: ubuntu-20.04
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     strategy:
       max-parallel: 10
       matrix:
