--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -11,7 +11,7 @@ jobs:
   prepare-verify:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
