chore(ci): workflows cleanup (#1152)
* Remove obsolete browserstack workflow

* Remove PAT token and change some VNG_VIVID_PAT to GITHUB_TOKEN (security)

* Revert to VNG_VVD_TOKEN

--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -11,14 +11,13 @@ jobs:
   prepare-verify:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           ref: master
-          token: ${{ secrets.VIVID_TOKEN }}
 
       - name: Writing .npmrc
         run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
