--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -22,7 +22,7 @@ jobs:
     name: Build
     runs-on: ubuntu-20.04
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - run: printf "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
@@ -42,13 +42,14 @@ jobs:
         with:
           name: workspace
           path: /tmp/vivid-env.tar.gz
+
   test:
     if: github.event.pull_request.draft == false
     needs: build
     name: "Test Components on ${{ matrix.browser_name }}"
     runs-on: ${{ matrix.os }}
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     strategy:
       max-parallel: 10
       matrix:
@@ -105,7 +106,7 @@ jobs:
     name: Test Components Graphics
     runs-on: macos-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     steps:
       - uses: actions/setup-node@v2
         with:
@@ -116,8 +117,6 @@ jobs:
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
       - run: npm rebuild playwright && yarn playwright install-deps
-        env:
-          GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
       - run: yarn ui-tests
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
@@ -131,7 +130,7 @@ jobs:
     name: ${{ matrix.script_name }}
     runs-on: ubuntu-20.04
     env:
-      GITHUB_TOKEN: ${{ secrets.VNG_VIVID_PAT }}
+      GITHUB_TOKEN: ${{ secrets.VNG_VVD_PAT }}
     strategy:
       max-parallel: 10
       matrix:
