--- a/components/breadcrumb-item/package.json
+++ b/components/breadcrumb-item/package.json
@@ -18,17 +18,21 @@
 	},
 	"scripts": {
 		"build:typescript": "tsc -b",
-		"build:styles": "umbrella-style-modules",
+		"build:styles": "umbrella-style-modules --cssLib '@microsoft/fast-element'",
 		"build": "yarn run build:styles && yarn run build:typescript"
 	},
 	"bugs": {
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vivid": "^3.0.0-next.10",
+		"@microsoft/fast-element": "^1.10.1",
+		"@microsoft/fast-foundation": "^2.46.2",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.29.0",
+		"@vonage/vvd-typography": "2.29.0",
+		"@vonage/vvd-umbrella": "2.29.0",
 		"typescript": "^4.3.2"
 	}
 }
