chore(cd): update release tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,11 +64,11 @@ jobs:
       - name: Creating ".npmrc"
         run: printf "always-auth=true\nregistry=https://${{ matrix.host }}/\n//${{ matrix.host }}/:_authToken=${{ secrets[matrix.token_secret] }}" > .npmrc
 
+      - name: Publishing "@vonage/vivid" package
+        run: npm publish $(node ./scripts/vivid-all-package-generator) --tag vivid-2
+
       - name: Publishing packages
         run: yarn lerna publish from-package --registry=https://${{ matrix.host }} --no-git-reset --loglevel verbose --yes
-
-      - name: Publishing "@vonage/vivid" package
-        run: npm publish $(node ./scripts/vivid-all-package-generator)
 
   deploy_storybook:
     name: Deploy "vivid.vonage.com" (Storybook)
